Added textures for Tin Ore and Deepslate Tin Ore. Fixed a typo in en_us.json. Mod still does not work. (I am going insane.)

--- a/src/main/resources/assets/firstproject/lang/en_us.json
+++ b/src/main/resources/assets/firstproject/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "block.firstproject.deepslate_tin_ore": "Deepslate Tin ore",
+  "block.firstproject.deepslate_tin_ore": "Deepslate Tin Ore",
   "block.firstproject.tin_block": "Block of Tin",
   "block.firstproject.tin_ore": "Tin Ore",
   "item.firstproject.boiled_leather": "Boiled Leather",
