Added various material blocks, and started to get datagen working.

--- a/src/main/resources/assets/firstproject/lang/en_us.json
+++ b/src/main/resources/assets/firstproject/lang/en_us.json
@@ -1,12 +1,16 @@
 {
+  "block.firstproject.bronze_block": "Block of Bronze",
   "block.firstproject.deepslate_tin_ore": "Deepslate Tin Ore",
+  "block.firstproject.raw_tin_block": "Block of Raw Tin",
   "block.firstproject.tin_block": "Block of Tin",
   "block.firstproject.tin_ore": "Tin Ore",
   "item.firstproject.boiled_leather": "Boiled Leather",
+  "item.firstproject.bronze_block": "Block of Bronze",
   "item.firstproject.chain_link": "Chain Link",
   "item.firstproject.chainmail": "Chainmail",
   "item.firstproject.deepslate_tin_ore": "Deepslate Tin Ore",
   "item.firstproject.raw_tin": "Raw Tin",
+  "item.firstproject.raw_tin_block": "Block of Raw Tin",
   "item.firstproject.tin_block": "Block of Tin",
   "item.firstproject.tin_ingot": "Tin Ingot",
   "item.firstproject.tin_nugget": "Tin Nugget",
