--- a/src/main/resources/assets/firstproject/lang/en_us.json
+++ b/src/main/resources/assets/firstproject/lang/en_us.json
@@ -1,19 +1,36 @@
 {
+  "block.firstproject.brass_block": "Block of Brass",
   "block.firstproject.bronze_block": "Block of Bronze",
   "block.firstproject.deepslate_tin_ore": "Deepslate Tin Ore",
+  "block.firstproject.deepslate_zinc_ore": "Deepslate Zinc Ore",
   "block.firstproject.raw_tin_block": "Block of Raw Tin",
+  "block.firstproject.raw_zinc_block": "Block of Raw Zinc",
   "block.firstproject.tin_block": "Block of Tin",
   "block.firstproject.tin_ore": "Tin Ore",
+  "block.firstproject.zinc_block": "Block of Zinc",
+  "block.firstproject.zinc_ore": "Zinc Ore",
+  "item.firstproject.brass_block": "Block of Brass",
+  "item.firstproject.brass_ingot": "Brass Ingot",
+  "item.firstproject.brass_nugget": "Brass Nugget",
+  "item.firstproject.bronze_ingot": "Bronze Ingot",
+  "item.firstproject.bronze_nugget": "Bronze Nugget",
   "item.firstproject.boiled_leather": "Boiled Leather",
   "item.firstproject.bronze_block": "Block of Bronze",
   "item.firstproject.chain_link": "Chain Link",
   "item.firstproject.chainmail": "Chainmail",
   "item.firstproject.deepslate_tin_ore": "Deepslate Tin Ore",
+  "item.firstproject.deepslate_zinc_ore": "Deepslate Zinc Ore",
   "item.firstproject.raw_tin": "Raw Tin",
+  "item.firstproject.raw_zinc": "Raw Zinc",
   "item.firstproject.raw_tin_block": "Block of Raw Tin",
+  "item.firstproject.raw_zinc_block": "Block of Raw Zinc",
   "item.firstproject.tin_block": "Block of Tin",
   "item.firstproject.tin_ingot": "Tin Ingot",
   "item.firstproject.tin_nugget": "Tin Nugget",
   "item.firstproject.tin_ore": "Tin Ore",
+  "item.firstproject.zinc_block": "Block of Zinc",
+  "item.firstproject.zinc_ingot": "Zinc Ingot",
+  "item.firstproject.zinc_nugget": "Zinc Nugget",
+  "item.firstproject.zinc_ore": "Zinc Ore",
   "itemGroup.firstproject": "First Project"
 }
