--- a/src/main/resources/assets/firstproject/lang/en_us.json
+++ b/src/main/resources/assets/firstproject/lang/en_us.json
@@ -20,6 +20,7 @@
   "item.firstproject.chainmail": "Chainmail",
   "item.firstproject.deepslate_tin_ore": "Deepslate Tin Ore",
   "item.firstproject.deepslate_zinc_ore": "Deepslate Zinc Ore",
+  "item.firstproject.human_flesh": "Human Flesh",
   "item.firstproject.raw_tin": "Raw Tin",
   "item.firstproject.raw_zinc": "Raw Zinc",
   "item.firstproject.raw_tin_block": "Block of Raw Tin",
