--- a/src/main/resources/assets/firstproject/lang/en_us.json
+++ b/src/main/resources/assets/firstproject/lang/en_us.json
@@ -13,6 +13,7 @@
   "item.firstproject.brass_ingot": "Brass Ingot",
   "item.firstproject.brass_nugget": "Brass Nugget",
   "item.firstproject.boiled_leather": "Boiled Leather",
+  "item.firstproject.brass_hinge": "Brass Hinge",
   "item.firstproject.bronze_block": "Block of Bronze",
   "item.firstproject.bronze_ingot": "Bronze Ingot",
   "item.firstproject.bronze_nugget": "Bronze Nugget",
@@ -20,11 +21,14 @@
   "item.firstproject.chainmail": "Chainmail",
   "item.firstproject.deepslate_tin_ore": "Deepslate Tin Ore",
   "item.firstproject.deepslate_zinc_ore": "Deepslate Zinc Ore",
+  "item.firstproject.door_handle": "Door Handle",
+  "item.firstproject.double_wooden_oar": "Double Wooden Oar",
   "item.firstproject.human_flesh": "Human Flesh",
   "item.firstproject.raw_tin": "Raw Tin",
   "item.firstproject.raw_zinc": "Raw Zinc",
   "item.firstproject.raw_tin_block": "Block of Raw Tin",
   "item.firstproject.raw_zinc_block": "Block of Raw Zinc",
+  "item.firstproject.wooden_oar": "Wooden Oar",
   "item.firstproject.tin_block": "Block of Tin",
   "item.firstproject.tin_ingot": "Tin Ingot",
   "item.firstproject.tin_nugget": "Tin Nugget",
